--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,14 @@ body{
 }
 
 .chatList .loadingIndicator{
-	display: flex;
+	display: none;
 	width: 100%;
 	gap: 0.8rem;
 	flex-direction: column;
+}
+
+.chatList .message.loading .loadingIndicator{
+	display: flex;
 }
 
 .chatList .loadingIndicator .loadingBar{
